src/main/default/objects/Status__c/Status__c.object-meta.xml
<CustomObject>
    <description>This object stores the master list of statuses for all entities using record types.  Note that not all status attributes are applicable to all entity types</description>
    <label>Status</label>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I36000001VBQ4EAO_00N3600000E0xoPEAR</fullName>
        <active>true</active>
        <errorMessage>The selected status must be a quote status.</errorMessage>
        <field>Quote__c.Status__c</field>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Quote__c</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Quote_Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I36000002nC2eEAE_00N3600000Rjhw3EAB</fullName>
        <active>true</active>
        <field>Invoice__c.Status__c</field>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Invoice__c</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Invoice_Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I36000002nYqkEAE_00N3600000S7xL1EAJ</fullName>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <field>Credit_Memo__c.Status__c</field>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Credit_Memo__c</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Credit_Memo_Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000005Z90EAE_00Ni0000001Ytj2EAC</fullName>
        <active>true</active>
        <errorMessage>The selected status was not a Job Status</errorMessage>
        <field>Job__c.Status__c</field>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Job__c</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Job_Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000005Z9AEAU_00Ni0000001YuNREA0</fullName>
        <active>true</active>
        <errorMessage>The selected status must be a ticket status.</errorMessage>
        <field>Ticket__c.Status__c</field>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Ticket__c</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Ticket_Status</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000zFhnEAE_00Ni00000099NbwEAE</fullName>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (1 AND 3)</booleanFilter>
        <field>Status_Workflow__c.New_Status__c</field>
        <filterItems>
            <field>$Source.SObject__c</field>
            <operation>equals</operation>
            <valueField>Status__c.SObject__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.SObject_Record_Type__c</field>
            <operation>equals</operation>
            <valueField>Status__c.SObject_Record_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>Status__c.SObject_Record_Type__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Status Workflow_New Status</name>
        <sourceObject>Status_Workflow__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000zFhnEAE_00Ni00000099NbxEAE</fullName>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (1 AND 3)</booleanFilter>
        <field>Status_Workflow__c.Old_Status__c</field>
        <filterItems>
            <field>$Source.SObject__c</field>
            <operation>equals</operation>
            <valueField>Status__c.SObject__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.SObject_Record_Type__c</field>
            <operation>equals</operation>
            <valueField>Status__c.SObject_Record_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>Status__c.SObject_Record_Type__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Status Workflow_Old Status</name>
        <sourceObject>Status_Workflow__c</sourceObject>
    </namedFilters>
    <pluralLabel>Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>