src/main/default/objects/Status__c/fields/Allow_New_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Allow_New_Ticket__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>(Job statuses only) If selected, users can add new tickets for jobs with this status.</inlineHelpText>
    <label>Allow New Ticket</label>
    <type>Checkbox</type>
</CustomField>