src/main/default/objects/Status__c/fields/Available_for_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this property is checked then this status will be available within the Job Scheduling module.</description>
    <inlineHelpText>(Job statuses only) If selected, users can schedule crew and equipment for jobs with this status. Select this checkbox if you use the Job Scheduling feature.</inlineHelpText>
    <label>Available for Scheduling</label>
    <type>Checkbox</type>
</CustomField>