src/main/default/objects/Status__c/fields/Initial_Status_Console__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this status is the first status for new jobs/tickets in FieldFX Console. You can only select "Initial Status Console" for one status in a workflow.</inlineHelpText>
    <label>Initial Status Console</label>
    <type>Checkbox</type>
</CustomField>