src/main/default/objects/Status__c/fields/Initial_Status_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this status is the first status for new jobs/tickets in FieldFX Mobile. You can only select "Initial Status Mobile" for one status in a workflow.</inlineHelpText>
    <label>Initial Status Mobile</label>
    <type>Checkbox</type>
</CustomField>