src/main/default/objects/Status__c/fields/Prevent_Report__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent the user from saving a Report in Mobile/Back Office</description>
    <label>Prevent Report</label>
    <type>Checkbox</type>
</CustomField>