src/main/default/objects/Status__c/fields/Read_Only_Apps__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Apps__c</fullName>
    <inlineHelpText>Indicates whether jobs/tickets with this status are read-only in each application.</inlineHelpText>
    <label>Read Only Apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>