src/main/default/objects/Status__c/fields/Show_to_CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>Show_to_CustomerAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, jobs/tickets with this status are visible to customers in the FieldFX-Force.com Customer Community.</inlineHelpText>
    <label>Show to Customer</label>
    <type>Checkbox</type>
</CustomField>