src/main/default/objects/Status__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Select the sobject for this status.</description>
    <inlineHelpText>Object for which the status is used. You must make an entry in this field.</inlineHelpText>
    <label>SObject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job__c</fullName>
            </value>
            <value>
                <fullName>Ticket__c</fullName>
            </value>
            <value>
                <fullName>Quote__c</fullName>
            </value>
            <value>
                <fullName>Invoice__c</fullName>
            </value>
            <value>
                <fullName>Credit_Memo__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>