src/main/default/objects/Status__c/fields/SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Type__c</fullName>
    <description>Select the record type for the target sobject. This should be the developer name of the record type.</description>
    <inlineHelpText>Record type for which the status is used.</inlineHelpText>
    <label>SObject Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Field_Ticket</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Credit_Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>