src/main/default/objects/Status__c/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, jobs/tickets with this status sync to FieldFX Mobile.</inlineHelpText>
    <label>Sync</label>
    <type>Checkbox</type>
</CustomField>