src/main/default/objects/Status__c/recordTypes/Credit_Memo.recordType-meta.xml
<RecordType>
    <fullName>Credit_Memo</fullName>
    <active>true</active>
    <label>Credit Memo</label>
</RecordType>