src/main/default/objects/Status__c/recordTypes/Job.recordType-meta.xml
<RecordType>
    <fullName>Job</fullName>
    <active>true</active>
    <description>This record type is for Job statuses and their related configurations.</description>
    <label>Job</label>
</RecordType>