src/main/default/objects/Status__c/recordTypes/Quote.recordType-meta.xml
<RecordType>
    <fullName>Quote</fullName>
    <active>true</active>
    <label>Quote</label>
</RecordType>