src/main/default/objects/Status__c/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <description>This record type is for Ticket statuses and their related configurations.</description>
    <label>Ticket</label>
</RecordType>