src/main/default/objects/Status__c/listViews/Job_Statuses.listView-meta.xml
<ListView>
    <fullName>Job_Statuses</fullName>
    <columns>NAME</columns>
    <columns>Initial_Status_Console__c</columns>
    <columns>Initial_Status_Mobile__c</columns>
    <columns>Sync__c</columns>
    <columns>Allow_New_Ticket__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SObject__c</field>
        <operation>equals</operation>
        <value>Job__c</value>
    </filters>
    <label>Job Statuses</label>
    <language>en_US</language>
</ListView>